--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-org.gradle.jvmargs=-Xmx6g -XX:+UseG1GC -XX:+UseStringDeduplication -XX:+UseCompressedOops -XX:+UseFastAccessorMethods -XX:CompileThreshold=1000 -XX:+TieredCompilation -XX:+AggressiveOpts -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx6g -XX:+UseSerialGC -XX:+UseParallelGC -XX:+USeParNewGC -XX:+UseG1GC -Dfile.encoding=UTF-8
 org.gradle.daemon=true
 org.gradle.configureondemand=true
 org.gradle.parallel=true
